<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


   <!-- judul yang atas -->

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


   <!-- foto profil -->

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:src="@drawable/foto_profil"
        android:background="@drawable/profile_circle"

        android:padding="0dp"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:outlineProvider="background"

        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp" />


    <!-- nama and usn -->

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#222222"

        app:layout_constraintTop_toTopOf="@id/imgProfile"
        app:layout_constraintStart_toEndOf="@id/imgProfile"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="18dp"
        android:layout_marginEnd="20dp" />


    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/username"
        android:textSize="14sp"
        android:textColor="#777777"

        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"

        android:layout_marginTop="3dp" />


   <!-- statistik -->

    <LinearLayout
        android:id="@+id/statLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp">


     <!-- postingan -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_posts"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#222222" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textSize="12sp"
                android:textColor="#777777" />

        </LinearLayout>


       <!-- follower -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_followers"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#222222" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Followers"
                android:textSize="12sp"
                android:textColor="#777777" />

        </LinearLayout>


        <!-- following -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_following"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#222222" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Following"
                android:textSize="12sp"
                android:textColor="#777777" />

        </LinearLayout>

    </LinearLayout>


    <!-- bio -->

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/bio"
        android:textSize="14sp"
        android:textColor="#333333"

        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp" />


    <!-- button -->

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"

        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/tvBio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="5dp">


        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/button1"
            android:textSize="13sp"
            android:textColor="#222222"

            android:backgroundTint="#EEEEEE" />


        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />


        <Button
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/button2"
            android:textSize="13sp"
            android:textColor="#222222"

            android:backgroundTint="#EEEEEE" />

    </LinearLayout>

    <!-- Menu Icon Instagram -->

    <LinearLayout
        android:id="@+id/iconMenu"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/ic_grid"
            android:contentDescription="Posts" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/ic_reels"
            android:contentDescription="Reels" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/ic_repost"
            android:contentDescription="Repost" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:src="@drawable/ic_tagged"
            android:contentDescription="Tagged" />

    </LinearLayout>

   <!-- postingan postingan -->

    <ScrollView
        android:id="@+id/scrollPost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintTop_toBottomOf="@id/iconMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/photoGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- baris pertama -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan1"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan2"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan3"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

            </LinearLayout>

            <!-- baris kedua -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan4"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan5"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan6"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

            </LinearLayout>

            <!-- baris ketiga -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan7"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan8"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan9"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

            </LinearLayout>

            <!-- baris keempat -->
            <!-- baris keempat -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan10"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/postingan11"
                    android:scaleType="centerCrop"
                    android:background="#E8E8E8"
                    android:layout_margin="2dp" />

                <!-- tempat kosong -->
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>